# nestJS_NextJS--projects

./: .class-notepad.md.swp  README.md  azure_poprawiona_aut.json  class-notepad.md  git-commands.txt  scss-minxins.md  slicePayloadInChunks.md
1-data-structures-ts/: package-lock.json  package.json  tsconfig.json
Astra/: README.md  package-lock.json  package.json
C/: main.c
Docker/: index.js  notepad-2.md  notepad.md  notepad.txt  package-lock.json
Go/: concurrency.go  fileTImport.go  interface.go  main.go  myCustomStruc.go  pointers.go  readme.md  strucs_and_maps.go  userInputs.go
JSNOTEPAD/: Promise.js  README.md
Kursy_C/: 1-terminal  a.out  classses.cpp  functions.cpp  import_files.cpp  loopsArrays.cpp  main.cpp  pointers.cpp  pointers_reference.cpp  re.md  reference.cpp  rooster  strings.cpp  usingGeneric.cpp
Kursy_C/myapp/: CMakeLists.txt  README.md
Kursy_C/myapp/src/: tests.cpp
Patterns/: Memento.ts  State.ts  abstracClasses.ts  interfaces.ts  observer.ts
Postgress/: package.json  readme.md
Postgress-and-SQL/: SQL-readme.md  docker-compose.yml  readme.md
Python/: Readme.md  Regex.py  analize_data.py  args_kwargs.py  camera.py  check_if_duplicate.py  data.csv  date_time.py  dekoratory.py  dicrtrionaries.py  error.py  fetch.py  func_lambda_anonimowe.py  gui_app.py  headline.csv  image.py  input.py  list_and_decorators.py  mail_.py  my_classes.py  pdf_reader.py  pyt_speech.py  readme  simpson.csv  some_dummy.db  table_.csv  test.py  text_analizer.py  text_to_analize.txt  to_test.json  unit_test.py
React-notepads-txt/: context.txt  fetch.txt
(+2321 files in other folders)
